--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 <body>
     
 
+    <div class="section">
+        <div class="box">
+            <div class="tradingview-widget-copyright">
+                
+            </div>
+            <div class="tradingview-widget-container">
+
+                <div id="chart"></div>
+
+            </div>
+
+            <div class="tradingview-widget-copyright section-foot-text">
+                <a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank">  
+                        Track all markets on Tradingview
+                            <div class="section-foot-text small-credits">
+                              <b><i>Made with<i class="fa-solid fa-laptop-code m-1"></i> by </i></b>
+                              <i><a href="https://www.github.com/gluke0" target=”_blank” class="m-1"> <i class="fa-brands fa-square-github"></i> gluke </a></i>
+                            </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://s3.tradingview.com/tv.js"></script>
