--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 
     <div class="section">
         <div class="box">
+            <img class="lulino" src="./img/lulino.png" alt="Lulo Mascotte">
             <div class="tradingview-widget-copyright">
                 
             </div>
             <div class="tradingview-widget-container">
 
-                <div id="chart"></div>
+                <div id="chart">
+                        
+                </div>
 
             </div>
 
