--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="section">
         <div class="box">
             <img class="lulino" src="./img/lulino.png" alt="Lulo Mascotte">
+            <img class="lulino-candle" src="./img/candle.png" alt="Lulo Mascotte Candle">
+            <img class="lulino-muscle" src="./img/muscle.png" alt="Lulo Mascotte Muscle">
             <div class="tradingview-widget-copyright">
                 
             </div>
