--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="box">
             <img class="lulino" src="./img/lulino.png" alt="Lulo Mascotte">
             <img class="lulino-candle" src="./img/candle.png" alt="Lulo Mascotte Candle">
-            <img class="lulino-muscle" src="./img/muscle.png" alt="Lulo Mascotte Muscle">
+            <img class="lulino-muscle" src="./img/strong.png" alt="Lulo Mascotte Strong">
             <div class="tradingview-widget-copyright">
                 
             </div>
