stickers bring you to lulo

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div class="section">
         <div class="box">
-            <img class="lulino" src="./img/lulino.png" alt="Lulo Mascotte">
-            <img class="lulino-candle" src="./img/candle.png" alt="Lulo Mascotte Candle">
-            <img class="lulino-strong" src="./img/strong.png" alt="Lulo Mascotte Strong">
+            <a href="https://www.lulo.fi" target="_blank"><img class="lulino" src="./img/lulino.png" alt="Lulo Mascotte"></a>
+            <a href="https://www.lulo.fi" target="_blank"><img class="lulino-candle" src="./img/candle.png" alt="Lulo Mascotte Candle"></a>
+            <a href="https://www.lulo.fi" target="_blank"><img class="lulino-strong" src="./img/strong.png" alt="Lulo Mascotte Strong"></a>
             <div class="tradingview-widget-copyright">
                 
             </div>
