--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
 
             <div class="tradingview-widget-copyright section-foot-text">
-                <a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank">  
-                        Track all markets on Tradingview
+                <a href="https://www.lulo.fi/" rel="noopener nofollow" target="_blank">  
+                       start saving on lulo
                 </a>
             </div>
         </div>
