--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="tradingview-widget-copyright section-foot-text">
-                <a href="https://www.lulo.fi/" rel="noopener nofollow" target="_blank">  
+                <a href="https://www.lulo.fi/" class="lulo" rel="noopener nofollow" target="_blank">  
                        start saving on lulo
                 </a>
             </div>
