--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
 
             <div class="tradingview-widget-copyright section-foot-text">
                 <a href="https://www.lulo.fi/" class="lulo" rel="noopener nofollow" target="_blank">  
-                       start saving on lulo
+                       TAKE PROFIT AND LEND ON
                 </a>
+                <hr>
+                <a href="https://www.lulo.fi/" class="lulo" rel="noopener nofollow" target="_blank">  
+                <img id="logolink" src="./img/fluro-black_LOGO.png" alt="logo">
+             </a>
             </div>
         </div>
     </div>
